--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
         <link rel="stylesheet" href="style.css" />
         <title>Document</title>
     </head>
-    <body></body>
+    <body>
+        <div class="container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>GitHub</h2>
+                    <p>Veja meus projetos!</p>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
