--- a/index.html
+++ b/index.html
@@ -8,13 +8,99 @@
         <title>Document</title>
     </head>
     <body>
+        <header class="header-wrapper">
+            <div class="header">
+                <div class="checkbox-container">
+                    <div class="checkbox-wrapper">
+                        <input type="checkbox" id="toggle" />
+                        <label class="checkbox" for="toggle">
+                            <div class="trace"></div>
+                            <div class="trace"></div>
+                            <div class="trace"></div>
+                        </label>
+                        <div class="menu"></div>
+                        <nav class="menu-items">
+                            <ul>
+                                <li>
+                                    <a href="#">Home</a>
+                                </li>
+                                <li>
+                                    <a href="#">Sobre</a>
+                                </li>
+                                <li>
+                                    <a href="#">Projetos</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <h1>Paulo Hortelan</h1>
+            <h2>Front-End Developer</h2>
+            <div class="social-media">
+                <a href="#">Linkedin</a>
+                <a href="#">GitHub</a>
+            </div>
+        </header>
         <div class="container">
-            <div class="card">
-                <div class="card-wrapper">
-                    <h2>GitHub</h2>
-                    <p>Veja meus projetos!</p>
+            <div class="card-container">
+                <div class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Temporibus laborum molestiae neque suscipit repellendus
+                    excepturi, voluptatum delectus distinctio obcaecati corporis
+                    facilis omnis tempore nihil laudantium, corrupti libero
+                    facere esse ex? Lorem ipsum dolor, sit amet consectetur
+                    adipisicing elit. Tempora quod delectus voluptatum rerum
+                    repudiandae reiciendis totam ullam dolorum, ex officiis
+                    accusamus praesentium nisi incidunt, minus quos. Maiores
+                    deserunt similique unde?
+                </div>
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>GitHub</h2>
+                        <p>Veja meus projetos</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>Linkedin</h2>
+                        <p>Acompanhe minha carreira</p>
+                    </div>
+                </div>
+                <div class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Temporibus laborum molestiae neque suscipit repellendus
+                    excepturi, voluptatum delectus distinctio obcaecati corporis
+                    facilis omnis tempore nihil laudantium, corrupti libero
+                    facere esse ex? Lorem ipsum dolor, sit amet consectetur
+                    adipisicing elit. Tempora quod delectus voluptatum rerum
+                    repudiandae reiciendis totam ullam dolorum, ex officiis
+                    accusamus praesentium nisi incidunt, minus quos. Maiores
+                    deserunt similique unde?
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Temporibus laborum molestiae neque suscipit repellendus
+                    excepturi, voluptatum delectus distinctio obcaecati corporis
+                    facilis omnis tempore nihil laudantium, corrupti libero
+                    facere esse ex? Lorem ipsum dolor, sit amet consectetur
+                    adipisicing elit. Tempora quod delectus voluptatum rerum
+                    repudiandae reiciendis totam ullam dolorum, ex officiis
+                    accusamus praesentium nisi incidunt, minus quos. Maiores
+                    deserunt similique unde?
+                </div>
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>Instagram</h2>
+                        <p>Ou mais do meu dia a dia ;)</p>
+                    </div>
                 </div>
             </div>
         </div>
+        <footer class="footer">Feito por Paulo Hortelan</footer>
     </body>
 </html>
